# Wudao-dict-plus

./: .gitignore  README.md  index.html  meson.build  pyproject.toml
wudao_dict/: cli.py  client.py  draw.py  meson.build  server.py
wudao_dict/core/: __init__.py  config.py  error.py  interface.py  meson.build  server.py
wudao_dict/dict/: local.py
wudao_dict/dict/online/: utils.py  youdao.py
wudao_dict/dict/youdao/: youdao.py
wudao_dict/res/: dict.db.zst
wudao_dict/ui/: draw.py
